--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,11 +9,18 @@ a {
 #anchors {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 40px;
 }
 
 .table {
     width: 90%;
     margin: auto;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: var(--bs-border-radius);
+    overflow: hidden;
+    box-shadow: 0 0 10px; 
+    margin-top: 40px;
 }
   
 th {
@@ -29,6 +36,17 @@ th {
     box-shadow: 0 0 10px; 
 }
 
-#btn-weather {
+.btn-weather {
+    margin-top: 100px;
     box-shadow: 0 0 10px;
+    border-radius: var(--bs-border-radius);
+}
+
+.h-40 {
+    height: 40px !important;
+}
+
+#alert-message {
+    width: 90%; 
+    margin: auto; 
 }
