--- a/css/background.css
+++ b/css/background.css
@@ -1,23 +1,8 @@
 body {
-    margin: auto;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    background-color: #75b4e3;
+    background: linear-gradient(#75b4e3 0%, #8fe0ff 100%);
     overflow: auto;
-    background: linear-gradient(315deg, rgb(165, 230, 155) 3%, rgb(68, 146, 225) 38%, rgb(80, 238, 227) 68%, rgb(241, 99, 99) 98%);
-    animation: gradient 15s ease infinite;
-    background-size: 400% 400%;
     background-attachment: fixed;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 0%;
-    }
-    50% {
-        background-position: 100% 100%;
-    }
-    100% {
-        background-position: 0% 0%;
-    }
 }
 
 .wave {
